syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

option go_package = "./";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
  string token = 2;
}

message VerifyUserRequest {
  string token = 1;
}

message VerifyUserResponse {
  User user = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
}


